[tool.poetry]
name = "repl_python3_Discord-Bot"
version = "0.1.0"
description = ""
authors = ["TechStreetDev <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
psutil = "^5.8.0"
faunadb = "^4.1.0"
pymongo = "^3.11.3"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
